# knewIt

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a5ee7867b269_prd_0514_schema.py  d9df9de43878_prd_0516_schema_axis_cycle.py
backend/app/: cache.py  config.py  db.py  main.py
backend/app/api/v1/: __init__.py  cache.py  catalog.py  customers.py  dashboard.py  questions.py  users.py
backend/app/core/: auth.py  errors.py  exception_handlers.py  response.py
backend/app/jobs/: daily_batch.py
backend/app/models/: __init__.py  customer.py  indicator.py  user.py
backend/app/prompts/: answer.md  cause_flow.md  interpretation.md  questions.md  strategy.md
backend/app/schemas/: __init__.py  api.py  domain.py
backend/app/services/: authorization.py  cache_service.py  indicator_service.py  llm_service.py  news_service.py
backend/docs/: BACKLOG.md
backend/scripts/: seed_customers.py  seed_from_xlsx.py
docs/: README.md  flow-chart.md  frontend-changes-affecting-backend.md  main-ipo.md  tech-stack.md
docs/mockup/: index.html
docs/resource/: 제품_품종.csv  주문.csv  출하실적.csv  판매량_가이드.csv  판매량_실적.csv
frontend/: .env.local.example  .eslintrc.json  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
shared/types/: README.md  auth.ts  chat.ts  domain.ts  index.ts  ui.ts
src/: main.tsx
src/constants/: navigation.ts  routes.ts
(+167 files in other folders)
